Translated on translate.pretix.eu (Dutch)
Currently translated at 34.7% (822 of 2368 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/nl/

powered by weblate

--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-13 07:55+0000\n"
-"PO-Revision-Date: 2018-04-16 10:34+0000\n"
-"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
+"PO-Revision-Date: 2018-04-16 10:38+0000\n"
+"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix/nl/>"
 "\n"
 "Language: nl\n"
@@ -2056,6 +2056,9 @@ msgid ""
 "same value for multiple vouchers, you can get statistics on how many of them "
 "have been redeemed etc."
 msgstr ""
+"U kunt dit veld gebruiken om meerdere vouchers te groeperen. Als dezelfde "
+"waarde bij meerdere vouchers wordt ingevoerd kan u statistieken bekijken "
+"over hoe veel er zijn ingewisseld etc."
 
 #: pretix/base/models/vouchers.py:176
 #: pretix/control/templates/pretixcontrol/vouchers/bulk.html:5
