--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,10 +4,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-13 07:55+0000\n"
-"PO-Revision-Date: 2018-04-12 11:58+0000\n"
+"PO-Revision-Date: 2018-04-17 21:00+0000\n"
 "Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
-"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix/da/"
-">\n"
+"Language-Team: Danish "
+"<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11685,7 +11685,7 @@ msgstr "Gennemse bestilling"
 
 #: pretix/presale/templates/pretixpresale/event/checkout_confirm.html:10
 msgid "Please review the details below and confirm your order."
-msgstr ""
+msgstr "Kontroller venligst detaljerne nedenfor og bekræft din bestilling."
 
 #: pretix/presale/templates/pretixpresale/event/checkout_confirm.html:18
 #: pretix/presale/templates/pretixpresale/event/checkout_confirm.html:58
@@ -11713,7 +11713,7 @@ msgstr "Send tilmelding"
 
 #: pretix/presale/templates/pretixpresale/event/checkout_payment.html:6
 msgid "Please select how you want to pay."
-msgstr ""
+msgstr "Vælg venligst hvordan du vil betale."
 
 #: pretix/presale/templates/pretixpresale/event/checkout_payment.html:35
 msgid "There are no payment providers enabled."
@@ -11983,7 +11983,7 @@ msgstr ""
 
 #: pretix/presale/templates/pretixpresale/event/order.html:82
 msgid "Download all tickets at once:"
-msgstr ""
+msgstr "Hent alle billetter:"
 
 #: pretix/presale/templates/pretixpresale/event/order.html:96
 #, python-format
