Translated on translate.pretix.eu (German)
Currently translated at 100.0% (2369 of 2369 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de/

powered by weblate

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-19 16:10+0000\n"
-"PO-Revision-Date: 2018-04-19 16:15+0000\n"
+"PO-Revision-Date: 2018-04-19 16:17+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
@@ -11911,9 +11911,9 @@ msgid ""
 msgstr ""
 "Trotz des Namens werden Sofortüberweisungen von Stripe <strong>nicht</strong>"
 " sofort verarbeitet, sondern können in einigen Fällen <strong>bis zu 14 "
-"Tage</strong> zur Verarbeitung in Anspruch nehmen. Bitte aktiviere diese "
-"Zahlungsmethode nur, wenn die gesetzte Zahlungsfrist für so eine Verzögerung "
-"ausreichend ist."
+"Tage</strong> zur Verarbeitung in Anspruch nehmen. Bitte aktivieren Sie "
+"diese Zahlungsmethode nur, wenn die gesetzte Zahlungsfrist für so eine "
+"Verzögerung ausreichend ist."
 
 #: pretix/plugins/stripe/payment.py:203
 msgid "3D Secure mode"
