--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,10 +5,10 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 09:53+0000\n"
-"PO-Revision-Date: 2018-04-19 16:17+0000\n"
+"PO-Revision-Date: 2018-04-23 10:01+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
-"Language-Team: German <https://translate.pretix.eu/projects/pretix/pretix/de/"
-">\n"
+"Language-Team: German "
+"<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7756,10 +7756,8 @@ msgid "Check-in"
 msgstr "Check-ins"
 
 #: pretix/control/templates/pretixcontrol/item/index.html:40
-#, fuzzy
-#| msgid "Additional text"
 msgid "Additional settings"
-msgstr "Zusätzlicher Text"
+msgstr "Zusätzliche Einstellungen"
 
 #: pretix/control/templates/pretixcontrol/item/index.html:51
 msgid "Product history"
@@ -8591,16 +8589,13 @@ msgid "Go!"
 msgstr "Los!"
 
 #: pretix/control/templates/pretixcontrol/orders/index.html:78
-#, fuzzy, python-format
-#| msgid "Please fill in answers to all required questions."
+#, python-format
 msgid "List filtered by answers to question \"%(question)s\"."
-msgstr "Bitte füllen Sie Antworten zu allen benötigten Fragen ein."
+msgstr "Die Liste ist nach Antworten zur Frage \"%(question)s\" gefiltert."
 
 #: pretix/control/templates/pretixcontrol/orders/index.html:83
-#, fuzzy
-#| msgid "Remove from order"
 msgid "Remove filter"
-msgstr "Von Bestellung entfernen"
+msgstr "Filter entfernen"
 
 #: pretix/control/templates/pretixcontrol/orders/index.html:104
 msgid "Positions"
@@ -10726,7 +10721,7 @@ msgstr "Bekannte Domains"
 #: pretix/plugins/badges/templates/pretixplugins/badges/index.html:4
 #: pretix/plugins/badges/templates/pretixplugins/badges/index.html:6
 msgid "Badges"
-msgstr ""
+msgstr "Badges"
 
 #: pretix/plugins/badges/__init__.py:13
 #: pretix/plugins/banktransfer/__init__.py:14
@@ -10741,24 +10736,17 @@ msgid "the pretix team"
 msgstr "Das pretix-Team"
 
 #: pretix/plugins/badges/__init__.py:15
-#, fuzzy
-#| msgid ""
-#| "This plugin allows you to generate check-in lists for your conference."
 msgid ""
 "This plugin allows you to generate badges or name tags for your attendees."
 msgstr ""
-"Dieses Plugin erlaubt, Listen für den Check-in am Eventeingang zu erstellen."
+"Diese Erweiterung erlaubt, Namensschilder oder Badges für die Teilnehmer zu "
+"erstellen."
 
 #: pretix/plugins/badges/exporters.py:66
-#, fuzzy
-#| msgid "Attendee name"
 msgid "Attendee badges"
-msgstr "Name des Teilnehmers"
+msgstr "Teilnehmer-Badges"
 
 #: pretix/plugins/badges/exporters.py:83
-#, fuzzy
-#| msgctxt "checkin"
-#| msgid "Include pending orders"
 msgid "Include pending orders"
 msgstr "Bestellungen mit ausstehender Zahlung mit einschließen"
 
@@ -10766,104 +10754,81 @@ msgstr "Bestellungen mit ausstehender Zahlung mit einschließen"
 #: pretix/plugins/badges/templates/pretixplugins/badges/edit.html:8
 #: pretix/plugins/badges/templates/pretixplugins/badges/edit.html:15
 msgid "Badge layout"
-msgstr ""
+msgstr "Badge-Layout"
 
 #: pretix/plugins/badges/signals.py:104
 msgid "Badge layout created."
-msgstr ""
+msgstr "Das Badge-Layout wurde erstellt."
 
 #: pretix/plugins/badges/signals.py:105
-#, fuzzy
-#| msgid "Invalid product selected."
 msgid "Badge layout deleted."
-msgstr "Ungültiges Produkt ausgewählt."
+msgstr "Das Badge-Layout wurde gelöscht."
 
 #: pretix/plugins/badges/signals.py:106
 msgid "Badge layout changed."
-msgstr ""
+msgstr "Das Badge-Layout wurde geändert."
 
 #: pretix/plugins/badges/signals.py:119
 #, python-brace-format
 msgid "Badge layout {val}"
-msgstr ""
+msgstr "Badge-Layout {val}"
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/control_order_info.html:16
 #: pretix/plugins/badges/templates/pretixplugins/badges/index.html:27
 msgid "Print badges"
-msgstr ""
+msgstr "Badges drucken"
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/delete.html:9
-#, fuzzy, python-format
-#| msgid ""
-#| "Are you sure you want to delete the date <strong>%(subevent)s</strong>?"
+#, python-format
 msgid ""
 "Are you sure you want to delete the badge layout <strong>%(layout)s</strong>?"
-msgstr "Möchten Sie den Termin <strong>%(subevent)s</strong> wirklich löschen?"
+msgstr ""
+"Möchten Sie das Badge-Layout <strong>%(layout)s</strong> wirklich löschen?"
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/edit.html:6
 #: pretix/plugins/badges/templates/pretixplugins/badges/edit.html:13
-#, fuzzy, python-format
-#| msgid "Tax rule: %(name)s"
+#, python-format
 msgid "Badge layout: %(name)s"
-msgstr "Steuer-Regel: %(name)s"
+msgstr "Badge-Layout: %(name)s"
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/edit.html:23
-#, fuzzy
-#| msgid "Ticket design"
 msgid "Badge design"
-msgstr "Ticket-Design"
+msgstr "Badge-Design"
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/edit.html:27
-#, fuzzy
-#| msgid "You cannot remove your own permission to view this page."
 msgid "You can modify the design after you saved this page."
-msgstr "Sie können Ihre eigene Berechtigung nicht entfernen."
+msgstr ""
+"Sie können das Layout verändern, nachdem Sie diese Seite gespeichert haben."
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/index.html:10
-#, fuzzy
-#| msgid "You haven't created any products yet."
 msgid "You haven't created any badge layouts yet."
-msgstr "Sie haben noch keine Produkte erstellt."
+msgstr "Sie haben noch keine Badge-Layouts erstellt."
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/index.html:17
 #: pretix/plugins/badges/templates/pretixplugins/badges/index.html:24
-#, fuzzy
-#| msgctxt "subevent"
-#| msgid "Create a new date"
 msgid "Create a new badge layout"
-msgstr "Neuen Termin erstellen"
+msgstr "Neues Badge-Layout erstellen"
 
 #: pretix/plugins/badges/templates/pretixplugins/badges/index.html:63
-#, fuzzy
-#| msgid "Default"
 msgid "Make default"
-msgstr "Standard"
+msgstr "Zum Standard machen"
 
 #: pretix/plugins/badges/views.py:56
-#, fuzzy
-#| msgctxt "subevent"
-#| msgid "The new date has been created."
 msgid "The new badge layout has been created."
-msgstr "Eine neuer Termin wurde erstellt."
+msgstr "Das neue Badge-Layout wurde erstellt."
 
 #: pretix/plugins/badges/views.py:84 pretix/plugins/badges/views.py:114
 #: pretix/plugins/badges/views.py:144
-#, fuzzy
-#| msgctxt "subevent"
-#| msgid "The requested date does not exist."
 msgid "The requested badge layout does not exist."
-msgstr "Der ausgewählte Termin existiert nicht."
+msgstr "Das ausgewählte Badge-Layout existiert nicht."
 
 #: pretix/plugins/badges/views.py:126
-#, fuzzy
-#| msgctxt "subevent"
-#| msgid "The selected date has been deleted."
 msgid "The selected badge layout been deleted."
-msgstr "Der ausgewählte Termin wurde gelöscht."
+msgstr "Das ausgewählte Badge-Layout wurde gelöscht."
 
 #: pretix/plugins/badges/views.py:148
 msgid "Badge layout: {}"
-msgstr ""
+msgstr "Badge-Layout: {}"
 
 #: pretix/plugins/banktransfer/__init__.py:10
 #: pretix/plugins/banktransfer/__init__.py:13
