Translated on translate.pretix.eu (German)
Currently translated at 100.0% (2393 of 2393 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de/

powered by weblate

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 09:53+0000\n"
-"PO-Revision-Date: 2018-04-23 10:01+0000\n"
-"Last-Translator: Raphael Michel <michel@rami.io>\n"
+"PO-Revision-Date: 2018-04-23 19:52+0000\n"
+"Last-Translator: Felix Rindt <felix@rindt.me>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
 "Language: de\n"
@@ -3167,7 +3167,7 @@ msgstr ""
 "\n"
 "Neuste Informationen über Updates finden Sie immer im pretix.eu-Blog:\n"
 "\n"
-"https://pretix.eu/about/de/news/\n"
+"https://pretix.eu/about/de/blog/\n"
 "\n"
 "Viele Grüße,\n"
 "\n"
