--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 09:53+0000\n"
-"PO-Revision-Date: 2018-04-23 10:03+0000\n"
-"Last-Translator: Raphael Michel <michel@rami.io>\n"
+"PO-Revision-Date: 2018-04-24 04:00+0000\n"
+"Last-Translator: Felix Rindt <felix@rindt.me>\n"
 "Language-Team: German (informal) "
 "<https://translate.pretix.eu/projects/pretix/pretix/de_Informal/>\n"
 "Language: de_Informal\n"
@@ -3165,7 +3165,7 @@ msgstr ""
 "\n"
 "Neuste Informationen über Updates findest du immer im pretix.eu-Blog:\n"
 "\n"
-"https://pretix.eu/about/de/news/\n"
+"https://pretix.eu/about/de/blog/\n"
 "\n"
 "Viele Grüße,\n"
 "\n"
