--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 09:53+0000\n"
 "PO-Revision-Date: 2018-04-24 14:06+0000\n"
-"Last-Translator: Pernille Thorsen <perth@aarhus.dk>\n"
+"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
 "Language-Team: Danish "
 "<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
@@ -3134,6 +3134,15 @@ msgid ""
 "Best regards,\n"
 "Your {event} team"
 msgstr ""
+"Hej\n"
+"\n"
+"Din bestilling til {event} er blevet ændret.\n"
+"\n"
+"Du kan se status for din bestilling på\n"
+"{url}\n"
+"\n"
+"Venlig hilsen\n"
+"Arrangøren af {event}"
 
 #: pretix/base/settings.py:303
 #, python-brace-format
