--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-04-23 09:53+0000\n"
-"PO-Revision-Date: 2018-04-24 14:10+0000\n"
-"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
+"PO-Revision-Date: 2018-04-24 14:12+0000\n"
+"Last-Translator: Pernille Thorsen <perth@aarhus.dk>\n"
 "Language-Team: Danish "
 "<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
@@ -8332,11 +8332,9 @@ msgid "Please enable JavaScript in your browser."
 msgstr "Aktiver venligst JavaScript i din browser."
 
 #: pretix/control/templates/pretixcontrol/subevents/bulk.html:9
-#, fuzzy
-#| msgid "Create multiple voucher"
 msgctxt "subevent"
 msgid "Create multiple dates"
-msgstr "Opret vouchere"
+msgstr "Opret eventserie"
 
 #: pretix/control/templates/pretixcontrol/subevents/bulk.html:34
 #: pretix/control/templates/pretixcontrol/subevents/bulk.html:145
@@ -9279,18 +9277,13 @@ msgid ""
 msgstr ""
 
 #: pretix/control/views/dashboards.py:226
-#, fuzzy
-#| msgid "Show past events"
 msgid "Set up event"
-msgstr "Vis tidligere arrangementer"
+msgstr "Opret arrangement"
 
 #: pretix/control/views/dashboards.py:333 pretix/control/views/typeahead.py:43
-#, fuzzy
-#| msgctxt "subevent"
-#| msgid "New date"
 msgctxt "subevent"
 msgid "No dates"
-msgstr "Ny dato"
+msgstr "Ingen dato"
 
 #: pretix/control/views/dashboards.py:346
 msgid "Action required"
